# QML_Demo

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
app/: Settings.cpp  Settings.h  ThemeManager.cpp  ThemeManager.h
app/models/: PairModel.cpp  PairModel.h
ui/components/: ColorItem.qml  ColorPicker.qml  MyButton.qml  MyInput.qml  MyTabButton.qml  qmldir
ui/view/: Main.qml  Settings.qml
ui/view/pages/: History.qml  Home.qml  Settings.qml  qmldir
